# Featherweight

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml  requirements-colab-serve.txt  requirements-colab-train.txt  requirements-colab.txt  requirements.txt
notebooks/: colab_bfcl_base.ipynb  colab_bfcl_ft.ipynb  colab_serve_eval.ipynb  colab_sweep.ipynb  colab_train.ipynb
results/: base_vs_ft_heldout_eval.md  baselines.csv  baselines.md  sweep.csv  sweep.md
scripts/: prep_data.py  run_bfcl.py
src/featherweight/: __init__.py  config.py
src/featherweight/data/: __init__.py  format.py  load.py  mix.py  schema.py
src/featherweight/eval/: __init__.py  bfcl_register.py  bfcl_runner.py  heldout.py  report.py  sweep.py
src/featherweight/serve/: merge_quantize.py
src/featherweight/train/: __init__.py  sft.py
src/featherweight/utils/: __init__.py  cost.py  tracking.py
tests/: test_bfcl_register.py  test_bfcl_runner.py  test_config.py  test_cost.py  test_format.py  test_heldout.py  test_merge_quantize.py  test_mix.py  test_prep_data.py  test_report.py  test_schema.py  test_sft.py  test_sweep.py  test_tracking.py
