[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "featherweight"
version = "0.1.0"
description = "Fine-tuned Llama-3.1-8B function-calling specialist evaluated on BFCL."
readme = "README.md"
requires-python = ">=3.10"
# Runtime dependencies are pinned in requirements.txt (local/CPU) and
# requirements-colab.txt (GPU) for reproducible environments; the package
# itself declares none so `pip install -e .` only registers the import path.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
